<resources>
    <string name="app_name">PatracMonitor</string>
    <string name="buttonConnect">Připojit</string>
    <string name="textviewName">Jméno</string>
    <string name="textviewId">Služební číslo / osobní číslo</string>
    <string name="textviewIdSearch">Identifikátor pátrání</string>
    <string name="not_full_input">Musíte zadat jméno a identifikátor pátrání a/nebo vaše číslo.</string>
    <string name="tracking_enabled_notif">Sledování zahájeno</string>
    <string name="enable_gps">Povolte prosím GPS</string>
    <string name="gps_enabled">Sledování GPS povoleno</string>
    <string name="patrac">Pátrač</string>
    <string name="callonduty">Potřebujeme tě k pátrání</string>
    <string name="arrive">Mohu přijet do</string>
    <string name="not_arrive">Nemohu přijet</string>
    <string name="thank_you_to_come">Děkuji. Ozvu se co nejdříve. Sleduj prosím telefon.</string>
    <string name="thank_you__not_to_come">Děkujeme. Snad tedy příště.</string>
    <string name="calltocome">Potřebujeme tě. Přijeď. Pro podrobnosti klikni.</string>
    <string name="thank_you_on_the_way">Děkuji. Čekám tě na uvedeném místě.</string>
    <string name="buttonOnTheWay">Vyjíždím</string>
    <string name="title_activity_on_duty">OnDuty</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="pref_scanner_not_found">Nebyl nalezen skener</string>
    <string name="pref_scanner_not_found_download">Stráhnout skener?</string>
    <string name="pref_scanner_not_found_download_yes">Ano</string>
    <string name="pref_scanner_not_found_download_no">Ne</string>
    <string name="pref_scanner_identifier">Identifikátor</string>
    <string name="pref_scanner_format">Formát</string>
    <string name="map">Mapa</string>
    <string name="newmessageonserver">Našli jsme novou zprávu.</string>
    <string name="buttonMessages">Zprávy</string>
    <string name="buttonShowAttachment">Zobrazit přílohu</string>
    <string name="buttonSendAttachment">Odeslat přílohu</string>
    <string name="can_not_open_activity">Pro daný soubor není k dispozici prohlížeč.</string>
    <string name="checkboxAutoZoom">Automaticky přibližovat na pátrající osoby.</string>
    <string name="can_not_connect_to_server">Nemohu se spojit se serverem. Zkuste prosím později.</string>
    <string name="can_not_download_positions">Nemohu stáhnout pozice pátračů.</string>
    <string name="coordinator">Štáb</string>
    <string name="message_not_connected">nejte připojeni k pátrání. Nemohu zprávu odeslat.</string>
    <string name="message_no_recipient">Nebyl vybrán příjemce.</string>
    <string name="message">Zpráva</string>
    <string name="message_was_sent">byla odeslána</string>
    <string name="message_attachment_was_not_uploaded">Přílohu se nepodařilo odeslat. Možná příliš velká.</string>
    <string name="message_was_not_sent">nebyla odeslána</string>
    <string name="message_attachment_select">Vybrat přílohu</string>
    <string name="message_attachment">Příloha</string>
    <string name="message_attachment_can_not_be_zero_length">nemůže mít nulovou velikost</string>
    <string name="message_attachment_is_too_big">je příliš veliká</string>
    <string name="message_attachment_was_append">byla přidána</string>
    <string name="no_users">Nemohu najít pátrače v pátrání.</string>
    <string name="sending_message">Odesílám zprávu</string>
    <string name="message_attachment_not_found">Příloha nebyla nalezena. Zpráva nebyla odeslána.</string>
    <string name="scan_qr">QR kód</string>
</resources>
